# testing-1m-record-benchmark

./: .gitignore  BENCHMARK_RULES.md  CHECKLIST.md  Cargo.toml  README.md  RESUALT.MD  RESULTS.MD  TEST_STEPS.md  composer.json  generate-graph.py  go.mod  go.sum  package-lock.json  package.json
graphs/: MySQL_Boring_Plain_NodeJs_cpu_missing.txt
mysql/boring/a_plain/: plain.go  plain.js  plain.php  plain.py  plain.rs
results/: mysql_boring_a_plain_go.json  mysql_boring_a_plain_node.json  mysql_boring_a_plain_php.json  mysql_boring_a_plain_python.json
